--- a/_posts/2019-04-10-Vietnam.html
+++ b/_posts/2019-04-10-Vietnam.html
@@ -52,29 +52,29 @@ background: '/img/posts/vietnam/0.jpg'
   Con el corazón en la mano por el aventurero cruce, continúo caminando. De golpe, entre tantas motos en la vereda veo un hombre con un barbijo y una tijera en la mano. Me acerco disimuladamente para ver qué ocurría y encuentro la imagen más común del mundo, un peluquero cortándole el pelo a un hombre en plena vereda. El cliente supervisaba su trabajo mirando en un espejo que colgaba de un clavo en la pared. Los cabellos cortados caían sobre un trozo de tela atado a su cuello que también se sujetaba a la pared en dos extremos, por lo que no ensuciaba el suelo. Un profesionalismo absoluto. Giro sobre mi misma para continuar la caminata y pego un alarido al tocar el caño de escape caliente de la moto que esta estacionada justo al lado mío (la primera vez de las muchas tantas). Todavía no me acostumbro al estacionamiento en la vereda. Me agacho para ver si me quemé mucho, pero me levanto rápidamente porque veo una llamarada que se enciende unos metros más adelante. Esquivo las motos como puedo para seguir avanzando y veo un hombre colocando diferentes ingredientes en una olla ubicada sobre una gran llama, preparando el plato único que vendería ese día. Intento mirar dentro de la olla para ver de qué se trata, pero de repente escucho un hombre que me grita algo desde la calle. –Madame, Madame ¿Taxi?-. A ver señor, ¿qué le hace pensar que voy a querer un taxi en la situación en la que me encuentro? Quédese tranquilo que si necesito un taxi de seguro se lo voy a pedir. Con mi mejor cara de poker inhibo en mi cabeza el desfile de posibles respuestas para ese “taxista” al que nunca le contesté. 
 </p>
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/Vietnam/3.jpg" alt="Imagen mía frente al río">
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/3.jpg" alt="Imagen mía frente al río">
   <figcaption style="text-align: center;"> <b><i>Peluquero outdoor</i></b></figcaption>
 </figure>
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/Vietnam/2.jpg" alt="Imagen mía frente al río">
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/2.jpg" alt="Imagen mía frente al río">
   <figcaption style="text-align: center;"> <b><i>Entre todas las motos de la vereda/i></b></figcaption>
 </figure>
 <p>
   Continúo la marcha y me distraigo mirando a una mujer que, sentada en el umbral de su casa, corta chauchas en pequeñísimas tiras mientras unos pedazos de carne se orean en el calor, mal olor y contaminación del ambiente. Interrumpe mi contemplación una señora de baja estatura, que utiliza un barbijo para protegerse de la contaminación. Lleva un palo apoyado en uno de sus hombros y de él cuelgan dos cestas repletas de frutas, las cuales insiste en venderme. Al ver una fruta que jamás vi en mi vida, no lo dudo y compro un poco de lichi (originario del sur de China). Agradecida, la mujer me entrega el palo con las cestas y me pide mi celular para tomarme una foto con él. 
 </p>
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/Vietnam/13.jpg" alt="Imagen mía frente al río">
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/13.jpg" alt="Imagen mía frente al río">
   <figcaption style="text-align: center;"> <b><i>Mujer cortando chauchas</i></b></figcaption>
 </figure>
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/Vietnam/7.jpg" alt="Imagen mía frente al río">
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/7.jpg" alt="Imagen mía frente al río">
   <figcaption style="text-align: center;"> <b><i>La foto que me tomó la verdulera</i></b></figcaption>
 </figure>
 <p>
   Sigo caminando. Una mujer lavando la ropa y otra a su lado lavando los platos en la vereda ya no me parecen tan fuera de contexto. La señora comprando carne expuesta al rayo del sol y las moscas, tampoco. El chico en moto que tengo al lado hace 3 minutos taladrándome el marote con la palabra Taxi, menos. La mesa en la vereda donde se venden perros muertos y pelados listos para cocinar… bueno, eso sí que me da bastante impresión. Demás está decir que con todos estos acontecimientos sucediendo en simultáneo en la vía pública, el aroma que flota en el aire no es de los más agradables y la limpieza en las calles no abunda en lo absoluto.
 </p>
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/Vietnam/4.jpg" alt="Imagen mía frente al río">
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/4.jpg" alt="Imagen mía frente al río">
   <figcaption style="text-align: center;"> <b><i>Venta de carne "a la intemperie"</i></b></figcaption>
 </figure>
 <p>
@@ -84,7 +84,7 @@ background: '/img/posts/vietnam/0.jpg'
   Y las comidas en Vietnam serían siempre así, sentate (en el kínder), comé y callate, porque a menos que vayas a un restaurante turístico, la gente de los puestos locales por lo general no habla inglés. Pero tengo que admitir que aunque nunca supe el nombre de lo que comía y sólo me podía limitar a rogar un “No spicy please” (sin picante por favor) todo era muy rico. La comida en Vietnam es muy sana, variada y súper barata.
 </p>
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/Vietnam/6.jpg" alt="Imagen mía frente al río">
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/6.jpg" alt="Imagen mía frente al río">
   <figcaption style="text-align: center;"> <b><i>Comiendo una de mis almuerzos anónimos</i></b></figcaption>
 </figure>
 <p>
@@ -94,11 +94,11 @@ background: '/img/posts/vietnam/0.jpg'
   A la noche decido retomar mi exploración. Otra vez el calor y la humedad me cachetean al salir del hostel. Otra vez la emoción vuelve a fluir por mis venas. El centro de la ciudad es un hormiguero de gente que va y que viene, que cena o toma alguna bebida en los bares, que hace compras en comercios hasta altas horas de la noche. Luces, música en vivo en los restaurantes, shows en la calle. 
 </p>
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/Vietnam/8.jpg" alt="Imagen mía frente al río">
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/8.jpg" alt="Imagen mía frente al río">
   <figcaption style="text-align: center;"> <b><i>Cocinando la cena en la vereda</i></b></figcaption>
 </figure>
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/Vietnam/15.jpg" alt="Imagen mía frente al río">
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/15.jpg" alt="Imagen mía frente al río">
   <figcaption style="text-align: center;"> <b><i>Show callejero</i></b></figcaption>
 </figure>
 <p>
@@ -108,14 +108,14 @@ background: '/img/posts/vietnam/0.jpg'
   Cada día en Hanoi es una nueva aventura, y siempre hay algo interesante para hacer, como visitar sus museos sobre la guerra, caminar alrededor de su precioso lago o probar algo típico como el café y la cerveza con huevo. Según nos contaron, en la época de la guerra era muy difícil conseguir leche, por lo que sustituían las proteínas agregándole un huevo al café. ¡Una delicia!
 </p>
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/Vietnam/9.jpg" alt="Imagen mía frente al río">
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/9.jpg" alt="Imagen mía frente al río">
   <figcaption style="text-align: center;"> <b><i>Hombres jugando al ajedrez chino alrededor del lago</i></b></figcaption>
 </figure>
 <p>
   Y como olvidarme del día que fuimos a ver los trenes que pasan por Hanoi. Las vías atraviesan un sector de la ciudad donde hay edificaciones a ambos lados, como si hubieran cortado las casas al medio para que pasen los rieles por ahí. La vida allí también transcurre en la calle y los niños juegan sobre las vías, porque vereda no hay. Cuando el tren viene, todos despejan el área y ni siquiera queda un metro de distancia entre las paredes de las casas y los vagones. Sin contar que el horario en que pasa nunca es exacto, así como tampoco lo es la cantidad de trenes. A veces pasa uno al día, otras veces dos o tres en una jornada, por lo que la gente simplemente se guía por el ruido que hace el vehículo al aproximarse. Piel de gallina.
 </p>
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/Vietnam/16.jpg" alt="Imagen mía frente al río">
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/16.jpg" alt="Imagen mía frente al río">
   <figcaption style="text-align: center;"> <b><i>Tren pasando por Hanoi</i></b></figcaption>
 </figure>
 <p>
@@ -125,7 +125,7 @@ background: '/img/posts/vietnam/0.jpg'
   Como sólo contaba con dos semanas para visitar el país, decidí recorrer el norte. Tomé un bus nocturno a Sa-Pa, y al ingresar al mismo advertí que las sorpresas no habían finalizado. En su interior el colectivo tenía literalmente camas, distribuidas en una línea inferior y una superior, como si fueran cuchetas. En cada cama había una almohada y una manta. Esto era un bus común y muy barato, por lo que no podía entender semejante servicio. Todo estaba dispuesto para que descansemos plácidamente durante la noche. Todo pero no todos; el chofer conversaba a los gritos con su compañero todo el rato. Su celular sonaba cada 15 minutos, y el señor, que no entendía que el sonido se transmite por vía inalámbrica, gritaba a fin de que su interlocutor lo escuchara desde donde estuviera. Para colmo, creo que al chofer se le cayó el brazo sobre la bocina y no lo pudo levantar en todo el trayecto. Pobre… pobre mi ilusión de dormir algo. 
 </p>
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/Vietnam/24.jpg" alt="Imagen mía frente al río">
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/24.jpg" alt="Imagen mía frente al río">
   <figcaption style="text-align: center;"> <b><i>Bus nocturno</i></b></figcaption>
 </figure>
 <p>
@@ -388,7 +388,7 @@ background: '/img/posts/vietnam/0.jpg'
   Y supe que sería difícil abandonarla. Supe que siempre tendría un amor a la distancia. Como el verdadero amor, la encontré sin buscarla, sin planes, y me hechizó. Sé que nuestra relación duró muy poco, y sólo viví los primeros días típicos de toda relación, esa etapa del enamoramiento donde todo te sorprende, donde no te importan los defectos del otro y uno justifica absolutamente todo por la ceguera que produce esa revolución emocional que ocurre en nuestro interior. No sé cómo hubiera progresado el vínculo ni si hubiera funcionado la convivencia. Éramos tan pero tan diferentes que estoy segura que hubiera sido muy difícil. Interesante, pero difícil. Me contento con haberla conocido y saber que existe. Saber que como en toda relación, vino a cuestionar mis bases, mi lógica, y me transformó, dejando marcas inolvidables en mí. 
 </p>
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/Vietnam/11.jpg" alt="Imagen mía frente al río">
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/11.jpg" alt="Imagen mía frente al río">
   <figcaption style="text-align: center;"> <b><i>Con mi verdadero amor vietnamita, aunque creo que no sentía lo mismo por mi</i></b></figcaption>
 </figure>
 
