--- a/_posts/2019-04-10-Vietnam.html
+++ b/_posts/2019-04-10-Vietnam.html
@@ -57,7 +57,7 @@ background: '/img/posts/vietnam/0.jpg'
 </figure>
 <figure>
   <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/2.jpg" alt="Imagen mía frente al río">
-  <figcaption style="text-align: center;"> <b><i>Entre todas las motos de la vereda/i></b></figcaption>
+  <figcaption style="text-align: center;"> <b><i>Entre todas las motos de la vereda</i></b></figcaption>
 </figure>
 <p>
   Continúo la marcha y me distraigo mirando a una mujer que, sentada en el umbral de su casa, corta chauchas en pequeñísimas tiras mientras unos pedazos de carne se orean en el calor, mal olor y contaminación del ambiente. Interrumpe mi contemplación una señora de baja estatura, que utiliza un barbijo para protegerse de la contaminación. Lleva un palo apoyado en uno de sus hombros y de él cuelgan dos cestas repletas de frutas, las cuales insiste en venderme. Al ver una fruta que jamás vi en mi vida, no lo dudo y compro un poco de lichi (originario del sur de China). Agradecida, la mujer me entrega el palo con las cestas y me pide mi celular para tomarme una foto con él. 
