--- a/_posts/2019-04-10-Vietnam.html
+++ b/_posts/2019-04-10-Vietnam.html
@@ -85,7 +85,7 @@ background: '/img/posts/vietnam/0.jpg'
 </p>
 <figure>
   <img class="img-fluid" src="{{ site.baseurl }}/img/posts/vietnam/6.jpg" alt="Imagen mía frente al río">
-  <figcaption style="text-align: center;"> <b><i>Comiendo una de mis almuerzos anónimos</i></b></figcaption>
+  <figcaption style="text-align: center;"> <b><i>Comiendo uno de mis almuerzos anónimos</i></b></figcaption>
 </figure>
 <p>
   Luego de comer y después de tanta adrenalina sensorial me llega el cansancio y siento la necesidad de ir a descansar, pero no quiero. ¿Cuántas cosas voy a perderme mientras duermo? No estoy dispuesta a resignar un solo segundo de esta puesta en escena de una ciudad que rompe con todos mis parámetros de normalidad. Pero luego de un rato, mi cuerpo negocia con mi cerebro y acuerdan que sería bueno ir a descansar y volver a salir por la noche. Mientras vuelvo comienzo a prestar atención a las casas. Muchas viviendas son iguales que las mesas y las sillas, diminutas. Comprendí por qué su vida transcurre en las veredas, no tienen otro lugar donde hacer las cosas. Otras construcciones son como el tránsito, cada uno edifica y superpone lo que quiere, en donde quiere de la manera que quiere. Un verdadero collage digno de estar en una galería de exposición. 
@@ -174,7 +174,7 @@ background: '/img/posts/vietnam/0.jpg'
     <div class="carousel-item">
       <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/vietnam/sapa/3.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
-        <h5>...</h5>
+        <h5></h5>
         <p>Aldeanos vendiendo sus productos en el centro</p>
       </div>
     </div>
@@ -196,7 +196,7 @@ background: '/img/posts/vietnam/0.jpg'
         <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/vietnam/sapa/6.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
           <h5></h5>
-          <p>Una de las tantas mariposas que me visitaron</p>
+          <p>Mariposas</p>
         </div>
       </div>
       <div class="carousel-item">
@@ -361,14 +361,14 @@ background: '/img/posts/vietnam/0.jpg'
       <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/vietnam/48.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
         <h5></h5>
-        <p>En el paseo en bote, saliendo de una cueva</p>
+        <p></p>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/vietnam/12.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
         <h5></h5>
-        <p>Remando con los pies</p>
+        <p></p>
       </div>
     </div>
   </div>
