--- a/_posts/2019-04-10-Vietnam.html
+++ b/_posts/2019-04-10-Vietnam.html
@@ -368,7 +368,7 @@ background: '/img/posts/vietnam/0.jpg'
       <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/vietnam/12.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
         <h5></h5>
-        <p></p>
+        <p>                Remando con los pies</p>
       </div>
     </div>
   </div>
